--- a/Mission06_hwatso02/Views/Home/Movies.cshtml
+++ b/Mission06_hwatso02/Views/Home/Movies.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Movie Collection";
+    ViewData["Title"] = "Add A Movie";
 }
 
 @model Mission06_hwatso02.Models.MovieCollection
@@ -10,23 +10,30 @@
 <div>
     <form method="post">
         <label asp-for="Category">Category:</label>
-        <input asp-for="Category"/><br />
+        <select asp-for="CategoryId">
+            <option value="">Select a Category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@c.CategoryId">@c.CategoryName</option>
+            }
+        </select><br />
 
         <label asp-for="Title">Title:</label>
-        <input asp-for="Title"/><br />
+        <input asp-for="Title" /><br />
 
         <label asp-for="Year">Year:</label>
-        <input asp-for="Year"/><br />
+        <input asp-for="Year" /><br />
 
         <label asp-for="Director">Director:</label>
-        <input asp-for="Director"/><br />
+        <input asp-for="Director" /><br />
 
         <label asp-for="Rating">Movie Rating:</label>
-        <select>
-            <option value="G">G</option>
-            <option value="PG">PG</option>
-            <option value="PG13">PG-13</option>
-            <option value="R">R</option>
+        <select asp-for="RatingId">
+            <option value="">Select a Rating</option>
+            @foreach (Rating r in ViewBag.Ratings)
+            {
+                <option value="@r.RatingId">@r.RatingName</option>
+            }
         </select><br />
 
         <label asp-for="Edited">Edited:</label>
@@ -36,10 +43,10 @@
         </select><br />
 
         <label asp-for="LentTo">Lent To:</label>
-        <input asp-for="LentTo"/><br />
+        <input asp-for="LentTo" /><br />
 
         <label asp-for="Notes">Notes:</label>
-        <input asp-for="Notes"/><br />
+        <input asp-for="Notes" /><br />
 
         <button type="submit">Add Movie</button>
     </form>
