--- a/Mission06_hwatso02/Views/Shared/_Layout.cshtml
+++ b/Mission06_hwatso02/Views/Shared/_Layout.cshtml
@@ -18,7 +18,11 @@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Podcasts">My Podcasts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Movies">Movies</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Movies">Add Movies</a>
+                </li>
+                <!--Add link to list of movies-->
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieList">Movie List</a>
                 </li>
             </ul>
         </nav>
