--- a/Mission06_hwatso02/Views/Home/MovieList.cshtml
+++ b/Mission06_hwatso02/Views/Home/MovieList.cshtml
@@ -31,6 +31,9 @@
             <td>@m.Edited</td>
             <td>@m.LentTo</td>
             <td>@m.Notes</td>
+
+            <td><a asp-controller="Home" asp-action="Edit" asp-route-movieid="@m.MovieId">Edit</a></td>
+            <td><a asp-controller="Home" asp-action="Delete">Delete</a></td>
         </tr>
             }
     </tbody>
