--- a/Mission06_hwatso02/Views/Home/MovieList.cshtml
+++ b/Mission06_hwatso02/Views/Home/MovieList.cshtml
@@ -33,7 +33,7 @@
             <td>@m.Notes</td>
 
             <td><a asp-controller="Home" asp-action="Edit" asp-route-movieid="@m.MovieId">Edit</a></td>
-            <td><a asp-controller="Home" asp-action="Delete">Delete</a></td>
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-movieid="@m.MovieId">Delete</a></td>
         </tr>
             }
     </tbody>
