--- a/Mission06_hwatso02/Views/Home/MovieList.cshtml
+++ b/Mission06_hwatso02/Views/Home/MovieList.cshtml
@@ -32,6 +32,7 @@
             <td>@m.LentTo</td>
             <td>@m.Notes</td>
 
+            <!--Add Edit and Delete Options-->
             <td><a asp-controller="Home" asp-action="Edit" asp-route-movieid="@m.MovieId">Edit</a></td>
             <td><a asp-controller="Home" asp-action="Delete" asp-route-movieid="@m.MovieId">Delete</a></td>
         </tr>
