--- a/Mission06_hwatso02/Views/Home/Delete.cshtml
+++ b/Mission06_hwatso02/Views/Home/Delete.cshtml
@@ -8,6 +8,7 @@
 <h3>Are you sure you want to delete @Model.Title?</h3>
 <br />
 
+<!--Delete buttons-->
 <form method="post" asp-action="Delete">
     <button type="submit">Delete</button>
     <br /><br />
